agregando bin al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ build/
 # Si usas perfiles, también ignorá:
 src/main/resources/application-*.properties
 src/main/resources/application-*.yml
+/bin/
